# cif-filter-copy

./: .gitignore  20240229_oliynyk_test_atom_mixing_missing_files.csv  LICENSE  README.md  binary M-X.xlsx  binary M-X_filtered.xlsx  main.py  nodemon.json  pyproject.toml  requirements.txt  setup.py  test-modify.py
.github/: ci.yml
00006_distances/: 1816791.cif
20240227_label/: 250165.cif  250692.cif  250804.cif
20240227_lable_symbol/: 250165.cif  312084.cif
20240228_test_dist/: AlGd.cif
20240229_oliynyk_test_atom_mixing/: 1234749.cif  554038.cif
20240305_atom_site_test/: 1928666.cif  250143.cif
20240706_test/: 1200981.cif
20240706_test_files/: 300808.cif
M-X-CIF/: 1002170.cif  1002705.cif  1007502.cif  1009945.cif  1010851.cif  1010986.cif  1013047.cif  1013153.cif  1013211.cif  1021386.cif  1023221.cif  1024859.cif  1031267.cif  1042616.cif  1042786.cif  1042812.cif  1048104.cif  1048891.cif  1049161.cif  1050321.cif  1100699.cif  1100708.cif  1102012.cif  1121939.cif  1122286.cif  1125948.cif  1128956.cif  1141452.cif  1142113.cif  1142114.cif  1142988.cif  1149576.cif  1200657.cif  1200977.cif  1210723.cif  1212379.cif  1221078.cif  1221080.cif  1223244.cif  1223245.cif  (+431 more)
R-M-X_CIFs2/: 1000149.cif  1000163.cif  1000164.cif  1000165.cif  1000166.cif  1000167.cif  1000168.cif  1000235.cif  1000238.cif  1000286.cif  1000287.cif  1000288.cif  1000289.cif  1000290.cif  1000291.cif  1000292.cif  1000293.cif  1000294.cif  1000295.cif  1000296.cif  1000297.cif  1000298.cif  1000299.cif  1000300.cif  1000301.cif  1000302.cif  1000303.cif  1000304.cif  (+6939 more)
(+6579 files in other folders)
