[project]
name = "cif-cleaner"  # Changed to a valid PEP 508 identifier
authors = [
  {name = "Sangjoon Lee", email = "sl5400@columbia.edu"}
]
maintainers = [
  {name = "Sangjoon Lee", email = "sl5400@columbia.edu"}
]
description = "An interactive command-line tool to preprocess, sort, and extract info from .cif files"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["CIF", "high-throughput", "crystallography", "materials science", "data cleaning"]

dependencies = [
    "gemmi==0.6.6",
    "matplotlib==3.9.1",
    "numpy==2.0.0",
    "pyvista==0.43.10",
    "scipy==1.14.0",
    "click==8.1.7",
    "pandas==2.2.1",
    "cifkit==1.0.2"
]

[project.urls]
Repository = "https://github.com/bobleesj/cif-cleaner"
